[package]
name = "peak_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.36", features = ["full"] }
tower = { version = "0.5.2", features = [
    "limit",
    "load-shed",
    "retry",
    "timeout",
    "util",
] }
tower-http = { version = "0.6.6", features = [
    "trace",
    "compression-gzip",
    "cors",
    "request-id",
    "timeout",
    "limit",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
headers = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
base64 = "0.22.1"
reqwest = { version = "0.12.24", features = ["json"] }
